 - Final fix for filenames' encoding in DCC.
 - New unicode character chart window.
 - xtext: properly recalculate text widths after a font change.
 - Fixed IRC::dcc_list 1.8.x incompatibility (Charles Lopes).
 - xtext: Implemented scrolling instead of full redraws when not using
   a background image or transparency.
 - Reimplemented 'Move front tab left/right' keybinding.
 - 
 - 
 - 
 - TODO: charset translation for dcc chat
 - 


----------------------------------------------------------------------
 1.9.7
----------------------------------------------------------------------

 - Updated Swedish translation (Christian Rose).
 - Updated Spanish translation (Pablo del Campo).
 - Updated Dutch translation (Bart Coppens).
 - Added /GETSTR and /GETINT.
 - Misc. serverlist bug fixes (Shaun Guth).
 - Plugin changes/fixes:
   * Added xchat_get_info("network").
   * Added new function: xchat_hook_fd().
   * Fixed "DCC Chat Text" event (Daniel P. Stasinski).
   * Added "Open Context" print event.
   * Fixed implementation of EAT_ return codes.
   * Keep the leading ":" in server events passed to plugins.
   * Added hack to make plugins possible on win32.
   * Fixed /unload <plugin_file_name> crash.
 - Fixed changing tabs via keyboard.
 - Added a few keyboard accelerators to the menubar.
 - Fixed close-tab-0 crash.
 - Fixed userlist popup menu disappearing on button-release.
 - Fixed color paste.
 - Added a character set selector to the serverlist.
 - Send DCC filenames in system encoding (gets converted if a charset
   is chosen in the serverlist).
 - Fixed possible Search Text crash.
 - Removed --enable-japanese-conv configure option (isn't this
   superseded by the new charset selector?).
 - Use --enable-openssl by default.
 - Fixed your nick not changing in dialog windows.
 - xtext: deal better with invalid utf8.
 - Made it possible to do /server <networkname>.
 - win32: backported tint/transparency code from 1.8.10.

